@@ -127,6 +127,12 @@ ldns_lookup_table ldns_error_str[] = {
 		"did not end in a self-signed certificate" },
         { LDNS_STATUS_INVALID_ILNP64, 
 		"Conversion error, 4 colon seperated hex numbers expected" },
+        { LDNS_STATUS_INVALID_EUI48, 
+		"Conversion error, 6 two character hex numbers "
+		"seperated by dashes expected (i.e. xx-xx-xx-xx-xx-xx" },
+        { LDNS_STATUS_INVALID_EUI64, 
+		"Conversion error, 8 two character hex numbers "
+		"seperated by dashes expected (i.e. xx-xx-xx-xx-xx-xx-xx-xx" },
 	{ 0, NULL }
 };
 
