@@ -119,7 +119,9 @@ enum ldns_enum_status {
 	LDNS_STATUS_DANE_PKIX_DID_NOT_VALIDATE,
 	LDNS_STATUS_DANE_PKIX_NO_SELF_SIGNED_TRUST_ANCHOR,
 	LDNS_STATUS_EXISTS_ERR,
-	LDNS_STATUS_INVALID_ILNP64
+	LDNS_STATUS_INVALID_ILNP64,
+	LDNS_STATUS_INVALID_EUI48,
+	LDNS_STATUS_INVALID_EUI64
 };
 typedef enum ldns_enum_status ldns_status;
 
