@@ -339,6 +339,12 @@ ldns_rdf_new_frm_str(ldns_rdf_type type, const char *str)
 	case LDNS_RDF_TYPE_ILNP64:
 		status = ldns_str2rdf_ilnp64(&rdf, str);
 		break;
+	case LDNS_RDF_TYPE_EUI48:
+		status = ldns_str2rdf_eui48(&rdf, str);
+		break;
+	case LDNS_RDF_TYPE_EUI64:
+		status = ldns_str2rdf_eui64(&rdf, str);
+		break;
 	case LDNS_RDF_TYPE_NONE:
 	default:
 		/* default default ??? */
